# deep-read

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  convert.py  manage.py  pyproject.toml
.build/: Dockerfile  node.Dockerfile  react-setup.sh  requirements.in
.build/context/: docker-compose.yml
app/: __init__.py  asgi.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
app/adapters/db/: __init__.py  user_repository.py  user_settings_repository.py
app/adapters/search/: __init__.py  apps.py  qdrant_manager.py
app/adapters/security/: __init__.py  crypto_security_gateway.py  factory.py
app/core/: repositories.py  usecases.py
app/core/db/: __init__.py  fields.py
app/core/security/: gateways.py
app/domain/: value_objects.py
app/management/commands/: __init__.py  sendtestemail.py  sendtestemail.sh
app/migrations/: 0001_initial.py  0002_usersettings_batch_frequency_and_more.py  __init__.py
app/models/: __init__.py  user.py  user_settings.py
app/settings/: __init__.py  base.py  development.py  production.py
app/tests/: __init__.py  test_celery_integration.py  test_email_sending.py  test_environment_settings.py  test_security_settings.py  test_tasks.py  test_urls.py
app/tests/adapters/: __init__.py  test_crypto_security_gateway.py  test_security_factory.py
app/tests/adapters/db/: __init__.py  test_user_repository.py  test_user_settings_repository.py
app/tests/adapters/search/: __init__.py  test_apps.py  test_qdrant_connection.py  test_qdrant_manager.py
app/tests/core/: __init__.py
app/tests/domain/: test_value_objects.py
app/tests/integration/: __init__.py  test_secret_management_integration.py
app/tests/models/: test_user.py
app/tests/usecases/: __init__.py  test_login_user.py  test_register_user.py  test_user_settings_usecases.py
app/usecases/: __init__.py  login_user.py  register_user.py  user_settings.py
docs/: agile_practice.yml  architecture_design.md  context_diagram.md  context_summary.yml  folder_structure.yml  issues.yml  requirements.yml  requiremets.yml
docs/issues/: issues-01.yml  issues-02.yml  issues-03.yml  issues-04.yml  issues-05.yml  issues-06.yml  issues-07.yml  issues-08.yml  issues-09.yml  issues-10.yml
frontend/: TEST-SOLUTION-JA.md  TEST-SOLUTION.md  jest.config.cjs  package-lock.json  package.json  setupTests.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/coverage/: coverage-final.json  index.html
frontend/coverage/__mocks__/: fileMock.js.html  index.html
frontend/coverage/public/: index.html  mockServiceWorker.js.html
frontend/coverage/src/: App.tsx.html  index.html  main.tsx.html
frontend/coverage/src/infrastructure/services/: api.ts.html  index.html
frontend/coverage/src/mocks/: browser.ts.html  handlers.ts.html  index.html  server.ts.html
frontend/coverage/src/presentation/components/features/: AnswerDisplay.tsx.html  ChatPanel.tsx.html  MessageList.tsx.html  QuestionInput.tsx.html  index.html
frontend/coverage/src/presentation/hooks/: index.html  useChat.ts.html  useDocumentLibrary.ts.html  useDocumentStatusPolling.ts.html  useFileUpload.ts.html
frontend/coverage/src/presentation/pages/: LibraryPage.tsx.html  index.html  solution-notes.ts.html  test-fix-proposal.ts.html
frontend/coverage/src/types/: chat.ts.html  document.ts.html  index.html  paginatedDocumentsResponse.ts.html
frontend/coverage/src/utils/: csrf.ts.html  index.html
frontend/src/: App.tsx  main.tsx
frontend/src/components/DocumentList/: DocumentList.test.tsx  DocumentList.tsx  DocumentListItem.css  DocumentListItem.test.tsx  DocumentListItem.tsx
frontend/src/components/FileUpload/: FileUploadModal.test.tsx  FileUploadModal.tsx  FileUploadModalIsolated.test.tsx  UploadButton.tsx
frontend/src/hooks/: useDocumentLibrary.test.ts  useDocumentLibrary.ts  useDocumentStatusPolling.test.ts  useDocumentStatusPolling.ts  useFileUpload.test.ts  useFileUpload.ts
frontend/src/infrastructure/services/: api.test.ts  api.ts
frontend/src/mocks/: browser.ts  handlers.test.ts  handlers.ts
frontend/src/presentation/components/common/: TermsAgreementCheckbox.test.tsx  TermsAgreementCheckbox.tsx
frontend/src/presentation/components/features/: AnswerDisplay.tsx  ChatPanel.tsx  MessageList.tsx  QuestionInput.tsx
frontend/src/presentation/hooks/: useChat.test.ts  useChat.ts  useDocumentLibrary.test.ts  useDocumentLibrary.ts  useDocumentStatusPolling.test.ts  useDocumentStatusPolling.ts  useFileUpload.test.ts  useFileUpload.ts  useLegalConsent.test.ts  useLegalConsent.ts  useLibrarySearch.test.ts  useLibrarySearch.ts
frontend/src/presentation/pages/: LibraryPage.css  LibraryPage.test.tsx  LibraryPage.tsx  LoginPage.tsx  NoSearchResultsMessage.css  NoSearchResultsMessage.tsx  SettingsPage.tsx  SignUpPage.tsx  test-fix-proposal.ts
frontend/src/services/: api.test.ts  api.ts
frontend/src/types/: chat.ts  document.ts  legal.ts  paginatedDocumentsResponse.ts  search.ts  settings.ts
frontend/src/utils/: csrf.ts  validators.test.ts  validators.ts
frontend/src/views/: LibraryView.css  LibraryView.test.tsx  LibraryView.test.tsx.bak  LibraryView.tsx  LibraryView.tsx.bak  solution-notes.ts
tools/compatibility_checks/: README.md
tools/compatibility_checks/poppler/: README.md  check_poppler.py  convert_pdf_to_image.py  create_test_pdf.py
(+31 files in other folders)
