[project]
name = "deep-read"
version = "0.1.0"
description = ""
authors = [
    {name = "masatake",email = "mastake.home@outlook.jp"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2,<6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0" # pytestの最小バージョン指定 (例)
addopts = "-ra -q" # pytest実行時のデフォルトオプション (例)
testpaths = [      # テストファイルを探すディレクトリ (例)
    "tests",
    # "integration",
]
python_files = "test_*.py *_test.py tests.py" # テストファイルのパターン
python_classes = "Test*"                      # テストクラスのパターン
python_functions = "test_*"                   # テスト関数のパターン

# Django設定を使う場合の設定 (例)
django_find_project = "true" # 自動で Django プロジェクトを探す
DJANGO_SETTINGS_MODULE = "app.settings.development" # テスト時に使う設定ファイル
