[project]
name = "deep-read"
version = "0.1.0"
description = ""
authors = [
    {name = "masatake",email = "mastake.home@outlook.jp"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2,<6.0)",
    "qdrant-client (>=1.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0" # pytestの最小バージョン指定
addopts = "-ra -q" # pytest実行時のデフォルトオプション
testpaths = [      # テストファイルを探すディレクトリ
    "tests",
    "app/tests",   # アプリケーションのテストディレクトリを追加
]
python_files = "test_*.py"  # pytest.iniとpyproject.tomlの設定をマージ
python_classes = "Test*"    # テストクラスのパターン
python_functions = "test_*" # テスト関数のパターン

# pytest-django用の設定
DJANGO_SETTINGS_MODULE = "app.settings.base"  # Django設定モジュール
